Fix alignment issues, improve profile menu perf (#5)

--- a/cd-menu/cd-menu.less
+++ b/cd-menu/cd-menu.less
@@ -12,6 +12,7 @@
     display: none;
     text-decoration: none;
     cursor: pointer;
+    align-items: center;
 
     &-pic {
       border-radius: 100%;
@@ -25,6 +26,7 @@
       text-decoration: none;
       margin-left: 6px;
       font-weight: 400;
+      flex: 1;
     }
 
     &-menu {
@@ -362,7 +364,7 @@
         text-align: center;
         font-size: 22px;
         font-weight: 400;
-        background: @cd-white;
+        background: @cd-alt-white;
         margin: 0;
         padding: 12px;
 
@@ -455,7 +457,6 @@
       background: @cd-alt-white;
 
       > li {
-        padding: 0 10px;
         flex: 1;
         position: relative;
 
@@ -465,7 +466,7 @@
           color: @cd-black;
           text-decoration: none;
           text-transform: uppercase;
-          padding: 15px 0;
+          padding: 15px 10px;
           font-size: 14px;
           font-weight: 400;
           position: relative;
@@ -508,6 +509,7 @@
       transition: background-color 0.2s ease-out;
       padding: 15px 16px 15px 15px;
       margin: -15px 0 -15px 0;
+      min-width: 240px;
 
       &-dropdown {
         outline-width: 0;
